# personal_forum

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Rocket.toml
.github/workflows/: checks.yml
docs/: README.md  api_guide.md  deployment_guide.md
src/: admins.rs  constraints.rs  db.rs  main.rs  messages.rs  rooms.rs  sessions.rs  static_resources.rs  template_variables.rs  users.rs
static/: 404.html  admin_login.html  admin_pane.html  colors.html  index.html
static/css/: 404.css  admin_login.css  admin_pane.css  base.css  colors.css  index.css  room.css
static/js/: admin_login.js  admin_pane.js  base.js  colors.js  index.js  room.js
templates/: admin_login.html.tera  index.html.tera  room.html.tera
