[package]
name = "personal_forum"
version = "0.1.0"
authors = ["pandrei7 <preda.andrei174@gmail.com>"]
edition = "2018"

[dependencies]
ammonia = "3"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
rand = "0.7.3"
rocket = { version = "0.4.5", features = ["tls"] }
rocket_contrib = { version = "0.4.5", features = ["postgres_pool", "tera_templates"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.1"
