[package]
name = "personal_forum"
version = "0.2.0"
authors = ["pandrei7 <preda.andrei174@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
ammonia = "3.2.1"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
rand = "0.7.3"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets", "tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.1"
